--- a/packages.html
+++ b/packages.html
@@ -87,8 +87,8 @@
             <div class="modal-body">
               <select class="form-control form-control-lg option1">
                 <option> American Red Cross </option>
-                <option> Doctors Wihtout Borders </option>
-                <option> Florida Disaster Fund </option>
+                <option> Doctors Without Borders </option>
+                <option> United Nations </option>
               </select>
               <select class="form-control">
                 <option>Food Package</option>
