Centered grid and set columns to 3.

--- a/assests/source.html
+++ b/assests/source.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html5>
 <html lang="en">
     <head>
         <link rel ="stylesheet" href = "grid.css">
@@ -35,15 +35,15 @@
             </div>
 
             <div class = "grid-item mx-1 my-1">
-                <button>Add to Cart</button>
                 <img alt = "generator" src = "images/generator.webp">
                 <p>Generator</p>
+                <button>Add to Cart</button>
             </div>
 
             <div class = "grid-item mx-1 my-1">
-                <button>Add to Cart</button>
                 <img alt = "first aid kit" src = "images/firstaidkit.jpg">
                 <p>First Aid Kit</p>
+                <button>Add to Cart</button>
             </div>
 
             <div class = "grid-item mx-1 my-1">
