--- a/packages.html
+++ b/packages.html
@@ -7,7 +7,7 @@
   <title>Packages</title>
   <link rel="stylesheet" href="assets/css/bootstrap.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="assets/css/tickets.css">
+  <link rel="stylesheet" href="assets/css/packages.css">
   <link rel="stylesheet" href="assets/css/style.css">
 
   <script src='assets/js/vendor/jQuery.js'></script>
@@ -28,11 +28,18 @@
                 </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="schedule.html">Organization</a>
+            <a class="nav-link" href="organizations.html">Organization</a>
           </li>
           <li class="nav-item active">
             <span class="sr-only">(current)</span>
-            <a class="nav-link" href="tickets.html">Packages</a>
+            <a class="nav-link" href="packages.html">Packages</a>
+          </li>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/assests/source.html">Single Items</a>
+        </li>
+          <li class="nav-item">
+            <a class="nav-link" href="echo.html">3D</a>
           </li>
         </ul>
       </div>
@@ -71,7 +78,7 @@
           </tr>
         </tbody>
       </table>
-      <div class="col text-center">
+      <div class="mt-4 row align-items-center justify-content-center">
         <button type="button" class="btn btn-primary purchase" data-toggle="modal" data-target="#purchaseModal">Donate!</button>
       </div>
     </div>
@@ -108,37 +115,41 @@
           </div>
         </div>
       </div>
-    <footer class="page-footer" id="ticket-footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 py-5">
-            <div class="flex-center">
-              <!-- Facebook -->
-              <a>
-                <i class="fa fa-facebook fa-lg text-white mr-md-5 mr-3 fa-2x"> </i>
-              </a>
-              <!-- Twitter -->
-              <a>
-                <i class="fa fa-twitter fa-lg text-white mr-md-5 mr-3 fa-2x"> </i>
-              </a>
-              <!-- Google +-->
-              <a>
-                <i class="fa fa-google-plus fa-lg text-white mr-md-5 mr-3 fa-2x"> </i>
-              </a>
-              <!--Instagram-->
-              <a>
-                <i class="fa fa-instagram fa-lg text-white mr-md-5 mr-3 fa-2x"> </i>
-              </a>
-              <!--Pinterest-->
-              <a>
-                <i class="fa fa-pinterest fa-lg text-white fa-2x"> </i>
-              </a>
+      <footer class="page-footer">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12 py-5">
+              <div class="flex-center">
+                <!-- Facebook -->
+                <a>
+                  <i class="fa fa-facebook fa-lg text-white mr-md-5 mr-3 fa-2x">
+                  </i>
+                </a>
+                <!-- Twitter -->
+                <a>
+                  <i class="fa fa-twitter fa-lg text-white mr-md-5 mr-3 fa-2x">
+                  </i>
+                </a>
+                <!-- Google +-->
+                <a>
+                  <i
+                    class="fa fa-google-plus fa-lg text-white mr-md-5 mr-3 fa-2x"
+                  >
+                  </i>
+                </a>
+                <!--Instagram-->
+                <a>
+                  <i class="fa fa-instagram fa-lg text-white mr-md-5 mr-3 fa-2x">
+                  </i>
+                </a>
+                <!--Pinterest-->
+                <a>
+                  <i class="fa fa-pinterest fa-lg text-white fa-2x"> </i>
+                </a>
+              </div>
             </div>
-          </div>        
-        </div>        
-      </div>        
-    </div>        
-    <div class="footer-copyright text-center py-3 text-white">© 2019 Trilogy Education Services, a 2U, Inc. brand. All Rights Reserved.</div>        
-  </footer>    
+          </div>
+        </div>
+      </footer>  
 </body>
 </html>
