--- a/index.html
+++ b/index.html
@@ -1,39 +1,56 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>The Helping Hands Foundation</title>
-  <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="assets/css/bootstrap.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>The Helping Hands Foundation</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/bootstrap.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
-  <script src='assets/js/vendor/jQuery.js' defer></script>
-  <script src='assets/js/vendor/bootstrap.js' defer></script>
-  <script src='./dist/script.min.js' defer></script>
-
-</head>
-<body>
+    <script src="assets/js/vendor/jQuery.js" defer></script>
+    <script src="assets/js/vendor/bootstrap.js" defer></script>
+    <script src="./dist/script.min.js" defer></script>
+  </head>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">The Helping Hands Foundation</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarResponsive"
+          aria-controls="navbarResponsive"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home
-                    <span class="sr-only">(current)</span>
-                  </a>
+              <a class="nav-link" href="index.html"
+                >Home
+                <span class="sr-only">(current)</span>
+              </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Organizations</a>
+              <a class="nav-link" href="organizations.html">Organizations</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Packages</a>
+              <a class="nav-link" href="packages.html">Packages</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/assests/source.html">Single Items</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="echo.html">3D</a>
+              
             </li>
           </ul>
         </div>
@@ -41,77 +58,116 @@
     </nav>
 
     <header>
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="5000">
+      <div
+        id="carouselExampleIndicators"
+        class="carousel slide"
+        data-ride="carousel"
+        data-interval="5000"
+      >
         <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li
+            data-target="#carouselExampleIndicators"
+            data-slide-to="0"
+            class="active"
+          ></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner" role="complementary">
           <!-- Slide One - Set the background image for this slide in the line below -->
-          <div id="carousel-item-1" class="carousel-item fullscreen-carousel active" style="background-image: url('assets/img/chips.jpg')">
-            <div class="d-flex h-100 align-items-center justify-content-center carousel-caption">
+          <div
+            id="carousel-item-1"
+            class="carousel-item fullscreen-carousel active"
+            style="background-image: url('assets/img/HumanitarianRelief_Blog.png')"
+          >
+            <div
+              class="d-flex h-100 align-items-center justify-content-center carousel-caption"
+            >
               <div class="container">
                 <div class="row align-items-center justify-content-center">
-                    <h2 class="display-4 mb-2">Welcome to The Helping Hands Foundation!</h2>
+                  <h2 class="display-4 mb-2">
+                    Welcome to The Helping Hands Foundation!
+                  </h2>
                 </div>
-                <div class="row align-items-center justify-content-center"> 
-                  <h3>We serve as guide to all humans out there that have wonderful hearts to donate.</h3>
+                <div class="row align-items-center justify-content-center">
+                  <h3>
+                    We serve as guide to all humans out there that have
+                    wonderful hearts to donate.
+                  </h3>
                 </div>
-                <div class=" mt-4 row align-items-center justify-content-center"> 
-                  <a class="btn btn-primary" href="#">
-                      Donate!
-                  </a>
+                <div class="mt-4 row align-items-center justify-content-center">
+                  <a class="btn btn-primary" href="packages.html"> Donate! </a>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
+        <a
+          class="carousel-control-prev"
+          href="#carouselExampleIndicators"
+          role="button"
+          data-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a
+          class="carousel-control-next"
+          href="#carouselExampleIndicators"
+          role="button"
+          data-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
     </header>
 
-      <!-- Page Content -->
+    <!-- Page Content -->
     <div class="page-content">
       <section class="py-5">
         <div class="container">
           <h1 class="display-4">Organizations</h1>
-          <p class="lead">We've got a great selection of organizations for you to donate! </p>
-        </div>!
+          <p class="lead">
+            We've got a great selection of organizations for you to donate!
+          </p>
+        </div>
+        !
       </section>
 
       <section class="py-5">
         <div class="container">
           <h1 class="display-4">We need to act now</h1>
-          <p class="lead">A mother’s resolve to feed and protect her children is unwavering. Give now and stand with women doing everything they can to give their families a future.
-        </p>
+          <p class="lead">
+            A mother’s resolve to feed and protect her children is unwavering.
+            Give now and stand with women doing everything they can to give
+            their families a future.
+          </p>
         </div>
       </section>
-
-      <section class="py-5">
-          <div class="container">
-            <h1 class="display-4">Mission Statement</h1>
-            <p class="lead"> Helping Hands Foundation works with amazing huminatarian associations to bring food to the table for those people in need
-                our mission is to eradicate hunger due to poverty or due to natural disasters </p>
-          </div>
-        </section>
 
       <section class="py-5">
         <div class="container">
-          <h1 class="display-4">The numbers</h1>
-          <p class="lead">1.4 million children are malnourished and this number is expected to rise. </p>
+          <h1 class="display-4">Mission Statement</h1>
+          <p class="lead">
+            Helping Hands Foundation works with amazing huminatarian
+            associations to bring food to the table for those people in need our
+            mission is to eradicate hunger due to poverty or due to natural
+            disasters
+          </p>
+        </div>
+      </section>
+
+      <section class="py-5">
+        <div class="container">
+          <h1 class="display-4"></h1>
+          <p class="lead">
+            
+          </p>
         </div>
       </section>
     </div>
-
-
+   
     <footer class="page-footer">
       <div class="container">
         <div class="row">
@@ -119,28 +175,34 @@
             <div class="flex-center">
               <!-- Facebook -->
               <a>
-                <i class="fa fa-facebook fa-lg text-white mr-md-5 mr-3 fa-2x"> </i>
+                <i class="fa fa-facebook fa-lg text-white mr-md-5 mr-3 fa-2x">
+                </i>
               </a>
               <!-- Twitter -->
               <a>
-                <i class="fa fa-twitter fa-lg text-white mr-md-5 mr-3 fa-2x"> </i>
+                <i class="fa fa-twitter fa-lg text-white mr-md-5 mr-3 fa-2x">
+                </i>
               </a>
               <!-- Google +-->
               <a>
-                <i class="fa fa-google-plus fa-lg text-white mr-md-5 mr-3 fa-2x"> </i>
+                <i
+                  class="fa fa-google-plus fa-lg text-white mr-md-5 mr-3 fa-2x"
+                >
+                </i>
               </a>
               <!--Instagram-->
               <a>
-                <i class="fa fa-instagram fa-lg text-white mr-md-5 mr-3 fa-2x"> </i>
+                <i class="fa fa-instagram fa-lg text-white mr-md-5 mr-3 fa-2x">
+                </i>
               </a>
               <!--Pinterest-->
               <a>
                 <i class="fa fa-pinterest fa-lg text-white fa-2x"> </i>
               </a>
             </div>
-          </div>        
-        </div>        
-      </div>        
+          </div>
+        </div>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
