--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <a class="nav-link" href="packages.html">Packages</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/assests/source.html">Single Items</a>
+              <a class="nav-link" href="source.html">Single Items</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="echo.html">3D</a>
