--- a/source.html
+++ b/source.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html5>
+<!DOCTYPE html>
 <html lang="en">
-<html>
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The Helping Hands Foundation</title>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -9,7 +11,7 @@
   <link rel="stylesheet" href="assets/css/bootstrap.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
-  <link rel ="stylesheet" href = "/assets/css/grid.css">
+  <link rel ="stylesheet" href = "assets/css/grid.css">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
