--- a/source.html
+++ b/source.html
@@ -67,7 +67,7 @@
 
 <div class="front-page"><div class = "grid-container">
             <div class = "grid-item mx-1 my-1">
-                <img alt = "water bottle" src = "assets/images/waterbottle.webp">
+                <img src="assets/images/waterbottle.webp" alt="">
                 <p>Water Bottle</p>
                 <button>Add to Cart</button>
             
