--- a/echo.html
+++ b/echo.html
@@ -57,17 +57,17 @@
       <div></div>
     <h1 class="center">Scan and be surprise! </h1>
     <div class="qrcode">
-   <img src="/assets/img/eec51eb1-cd58-496c-9066-24d2675c7682.png" alt="Qr Code">
+   <img src="assets/img/eec51eb1-cd58-496c-9066-24d2675c7682.png" alt="Qr Code">
     </div>
 </div>
 <h1 class="center">Giving Food</h1>
     <div class="qrcode">
-   <img src="/assets/img/slideof.png" alt="Qr Code">
+   <img src="assets/img/slideof.png" alt="Qr Code">
     </div>
 </div>
 <h1 class="center">Bread</h1>
 <div class="qrcode">
-  <img src="/assets/img/ad2058ab-4237-48ce-9d5f-a72a2795f337.png" alt="Qr Code">
+  <img src="assets/img/ad2058ab-4237-48ce-9d5f-a72a2795f337.png" alt="Qr Code">
    </div>
    <h1 class="center">Banana</h1>
 
