--- a/source.html
+++ b/source.html
@@ -88,25 +88,25 @@
             </div>
 
             <div class = "grid-item mx-1 my-1">
-                <img alt = "generator" src = "/assets/images/generator.webp">
+                <img alt = "generator" src = "assets/images/generator.webp">
                 <p>Generator</p>
                 <button>Add to Cart</button>
             </div>
 
             <div class = "grid-item mx-1 my-1">
-                <img src = "/assets/images/firstaidkit.jpg">
+                <img src = "assets/images/firstaidkit.jpg">
                 <p>First Aid Kit</p>
                 <button>Add to Cart</button>
             </div>
 
             <div class = "grid-item mx-1 my-1">
-                <img src = "/assets/images/flashlight.jpg">
+                <img src = "assets/images/flashlight.jpg">
                 <p>Flashlight</p>
                 <button>Add to Cart</button>
             </div>
             
             <div class = "grid-item mx-1 my-1">
-                <img src = "/assets/images/batteriesAAA.webp">
+                <img src = "assets/images/batteriesAAA.webp">
                 <p>AAA Batteries</p>
                 <button>Add to Cart</button>
             </div>
