--- a/cart.html
+++ b/cart.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>The Helping Hands Foundation</title>
     <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="assets/css/cart.css" />
     <link rel="stylesheet" href="assets/css/bootstrap.css" />
     <link
       rel="stylesheet"
@@ -58,7 +58,7 @@
         </div>
       </div>
       
-            <img onmouseover="showCart(this)" class="cart" src="./images/cart.png" alt="">
+            <img onmouseover="showCart(this)" class="cart" src="assets/cart-images/cart.png" alt="">
             <p class="count-product">0</p>
         </div>
         <div class="cart-products" id="products-id">
@@ -75,7 +75,7 @@
         <div class="products">
             <div class="carts">
                 <div>
-                    <img src="./images/products/water.webp" alt="">
+                    <img src="assets/cart-images/products/water.webp" alt="">
                     <p><span>6</span>$</p>
                 </div>
                 <p class="title">Pack of water</p>
@@ -83,7 +83,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/flash.webp" alt="">
+                    <img src="assets/cart-images/products/flash.webp" alt="">
                     <p><span>10</span>$</p>
                 </div>
                 <p class="title"> Flashlight</p>
@@ -91,7 +91,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/chef.webp" alt="">
+                    <img src="assets/cart-images/products/chef.webp" alt="">
                     <p><span>4</span>$</p>
                 </div>
                 <p class="title">Spaghetti & Meatballs
@@ -100,7 +100,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/sleep.jpg" alt="">
+                    <img src="assets/cart-images/products/sleep.jpg" alt="">
                     <p><span>30.20</span>$</p>
                 </div>
                 <p class="title"> Sleeping bag</p>
@@ -108,7 +108,7 @@
             </div>
             <div class="carts">
                 <div>
-                <img src="./images/products/shampo.jpeg" alt="">
+                <img src="assets/cart-images/products/shampo.jpeg" alt="">
                     <p><span>10</span>$</p>
                 </div>
                 <p class="title"> Shampoo</p>
@@ -116,7 +116,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/beas.png" alt="">
+                    <img src="assets/cart-images/products/beas.png" alt="">
                     <p><span>5</span>$</p>
                 </div>
                 <p class="title"> Beans</p>
@@ -124,7 +124,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/clothing-donations.jpeg" alt="">
+                    <img src="assets/cart-images/products/clothing-donations.jpeg" alt="">
                     <p><span>23.99</span>$</p>
                 </div>
                 <p class="title"> Clothes</p>
@@ -132,7 +132,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/Mix package.jpeg" alt="">
+                    <img src="assets/cart-images/products/Mix package.jpeg" alt="">
                     <p><span>50</span>$</p>
                 </div>
                 <p class="title"> Mix package</p>
@@ -140,7 +140,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/6e5f1291-0b24-4ef9-a566-22e7697eee3a.2a4e7f4925d478f01612f0942fae4fb7.webp" alt="">
+                    <img src="assets/cart-images/products/6e5f1291-0b24-4ef9-a566-22e7697eee3a.2a4e7f4925d478f01612f0942fae4fb7.webp" alt="">
                     <p><span>16</span>$</p>
                 </div>
                 <p class="title"> Pack of gatorade</p>
@@ -148,7 +148,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/energy.jpeg" alt="">
+                    <img src="assets/cart-images/products/energy.jpeg" alt="">
                     <p><span>17.50</span>$</p>
                 </div>
                 <p class="title"> Energy drinks </p>
@@ -156,7 +156,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/rice.webp" alt="">
+                    <img src="assets/cart-images/products/rice.webp" alt="">
                     <p><span>10</span>$</p>
                 </div>
                 <p class="title">Rice</p>
