--- a/cart.html
+++ b/cart.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link rel="icon" href="icons8-donation-64.png" type="image/icon type">
    
 
     <script src="assets/js/vendor/jQuery.js" defer></script>
