--- a/organizations.html
+++ b/organizations.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="assets/css/bootstrap.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="icon" href="icons8-donation-64.png" type="image/icon type">
   
 
   <script src='assets/js/vendor/jQuery.js'></script>
