--- a/packages.html
+++ b/packages.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/packages.css">
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="icon" href="icons8-donation-64.png" type="image/icon type">
+
 
   <script src='assets/js/vendor/jQuery.js'></script>
   <script src='assets/js/vendor/bootstrap.js'></script>
@@ -17,7 +19,7 @@
 <body class="donations-bg">
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Disaster Relief</a>
+      <a class="navbar-brand" href="#">The Helping Hands Foundation</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
