--- a/cart.html
+++ b/cart.html
@@ -117,7 +117,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="assets/cart-images/products/beas.png" alt="">
+                    <img src="assets/cart-images/products/beas-PhotoRoom (1).png" alt="">
                     <p><span>5</span>$</p>
                 </div>
                 <p class="title"> Beans</p>
@@ -125,7 +125,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="assets/cart-images/products/clothing-donations.jpeg" alt="">
+                    <img src="assets/cart-images/products/clothing-donations-PhotoRoom.png" alt="">
                     <p><span>23.99</span>$</p>
                 </div>
                 <p class="title"> Clothes</p>
