--- a/echo.html
+++ b/echo.html
@@ -51,6 +51,11 @@
               <li class="nav-item">
                 <a class="nav-link" href="echo.html">3D</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="https://chrome.google.com/webstore/detail/read-aloud-a-text-to-spee/hdhinadidafjejdhmfkjgnolgimiaplp?hl=en" target="_blank">Accessibility</a>
+                
+                
+              </li>
             </ul>
           </div>
         </div>
